--- a/shirtpage.css
+++ b/shirtpage.css
@@ -101,3 +101,9 @@
   .cost {
     font-size: 36px;
   }
+  select {
+   left: 50% !important;
+   right: auto !important;
+   text-align: center !important;
+   transform: translate(-50%, 0) !important;
+  }
