--- a/shirtpage.css
+++ b/shirtpage.css
@@ -102,6 +102,6 @@
     font-size: 36px;
   }
   select {
-   left: 50% !important;
-   text-align: center !important;
+   justify-items: center;
+   text-align: center;
   }
