--- a/shirtpage.css
+++ b/shirtpage.css
@@ -126,10 +126,10 @@
       text-decoration: underline #ffffff;
     }
 .purchase-button {
-  color: #ffffff;
   font-family: 'Lexend Deca', sans-serif;
   font-size: 24px;
   text-align: center;
   margin: 10px auto;
+  margin-top: 10px;
   margin-top: 80px;
 }
